--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="16x16" href="images/icon.png">
-  <title>Thebearobloxfan782's ARG Site</title>
+  <title>Thebearobloxfan782's Site</title>
   <style>
     body {
       background-color: #0a0a0a;
